--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,210 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: axioz;
+  src: url(./Assets/Fonts/Azonix.otf);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: para;
+  src: url(./Assets/Fonts/PlayfairDisplaySC-Regular.ttf);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-header {
-  background-color: #282c34;
+body {
+  background: #0E0D10 !important;
+  position: relative;
+  height: 100vh;
   min-height: 100vh;
+  color: #fff !important;
+  cursor: url(./Assets/Images/cursor.png) !important;
+}
+
+body::after {
+  width: 90%;
+  border-left: 1px solid rgba(255, 255, 255, 0.22);
+  border-right: 1px solid rgba(255, 255, 255, 0.22);
+  height: fit-content !important;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0 5%;
+  opacity: 0.5;
+}
+
+body::before {
+  width: 30%;
+  border-left: 1px solid rgba(255, 255, 255, 0.22);
+  border-right: 1px solid rgba(255, 255, 255, 0.22);
+  height: fit-content !important;
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 0 35%;
+  opacity: 0.5;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: axioz;
+}
+
+.App p {
+  font-family: para;
+  text-transform: capitalize !important;
+}
+
+.header-con {
+  position: relative;
+}
+
+.header-con::after {
+  content: '';
+  position: fixed;
+  top: -500px;
+  left: -500px;
+  border-radius: 646.64px;
+  opacity: 0.5975;
+  background: radial-gradient(70.71% 70.71% at 50% 50%, #F6BEFF 0%, rgba(0, 0, 0, 0.00) 66%);
+  width: 866px;
+  height: 866px;
+  flex-shrink: 0;
+  z-index: -1;
+}
+
+.nav-links {
+  font-size: 20px !important;
+  color: #fff !important;
+  font-family: para !important;
+  text-transform: capitalize !important;
+  margin: 0px 20px !important;
+  padding: 0px 5px !important;
+  border: 2px solid transparent;
+}
+
+.nav-links:hover,
+.active {
+  border-bottom: 2px solid #fff;
+  border-left: 2px solid #fff;
+  border-right: 2px solid #fff;
+  border-radius: 50%;
+  font-size: 20px !important;
+  color: #fff !important;
+  font-family: para !important;
+  text-transform: capitalize !important;
+  margin: 0px 20px !important;
+  padding: 0px 5px !important;
+}
+.navs{
+  border-bottom: 1px solid rgba(255, 255, 255, 0.22);
+}
+.resume-btn {
+
+  border-radius: 3.68px;
+  background: rgba(246, 190, 255, 0.70);
+  backdrop-filter: blur(5.25px);
+  backdrop-filter: blur(5.25px);
+  color: transparent;
+  padding: 7.999px 45.852px 17.191px 50px;
+  font-family: para;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 22.05px;
+  /* 100.227% */
+  text-transform: capitalize !important;
+  position: relative;
+
+}
+
+.resume-btn::after {
+  content: 'Resume';
+  border-radius: 3.68px;
+  border: 1px solid rgba(159, 161, 163, 0.15);
+  background: rgba(245, 247, 250, 0.10);
+  backdrop-filter: blur(5.25px);
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  display: inline-flex;
+  padding: 7.999px 45.852px 17.191px 50px;
+  justify-content: flex-end;
+  align-items: center;
+  color: #0E0D10;
+}
+
+.resume-btn:hover::after {
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+
+.inner-con {
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
 }
 
-.App-link {
-  color: #61dafb;
+.inner-con h3 {
+  color: #FFF;
+  text-align: center;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 400;
+}
+.inner-con h3 img{
+  width: 60px;
+  height: 60px;
+  object-fit: contain;
+}
+.inner-con p{
+  color: #FFF;
+font-size: 25px;
+font-style: normal;
+font-weight: 400;
+line-height: 168.624%; /* 42.156px */
+font-variant: small-caps;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inner-con span {
+  color: #F6BEFF;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 400;
+  position: relative;
+}
+.inner-con span img{
+  content: '';
+  position: absolute;
+  /* background-image: url(./Assets/Images/vinith-svg.png); */
+  width: fit-content;
+  background-size: cover;
+  background-position: calc();
+  background-repeat: no-repeat;
+  height: 100%;
+}
+.main-img{
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.main-img img{
+  width: 100%;
+  height: 70vh;
+  object-fit: contain;
+  transition: 'width 1s' 
 }
