--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,14 @@ body {
   height: 100vh;
   min-height: 100vh;
   color: #fff !important;
-  cursor: url(./Assets/Images/cursor.png) !important;
+  cursor: url(./Assets/Images/cursor.png),auto !important;
 }
 
 body::after {
   width: 90%;
   border-left: 1px solid rgba(255, 255, 255, 0.22);
   border-right: 1px solid rgba(255, 255, 255, 0.22);
-  height: fit-content !important;
+  height: 300vh;
   content: '';
   position: absolute;
   top: 0;
@@ -40,7 +40,7 @@ body::before {
   width: 30%;
   border-left: 1px solid rgba(255, 255, 255, 0.22);
   border-right: 1px solid rgba(255, 255, 255, 0.22);
-  height: fit-content !important;
+  height: 300vh;
   content: '';
   position: absolute;
   top: 0;
@@ -147,14 +147,23 @@ h6 {
   left: 0;
   cursor: pointer;
 }
-
-.inner-con {
+.text-main{
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 60px;
   width: 100%;
+}
+.inner-con {
+  width: 10%;
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  position: absolute;
+  top: 60px;
 }
 
 .inner-con h3 {
@@ -201,10 +210,16 @@ font-variant: small-caps;
   display: flex;
   align-items: center;
   justify-content: center;
+  position: sticky;
+  top: 60px;
 }
 .main-img img{
   width: 100%;
   height: 70vh;
   object-fit: contain;
   transition: 'width 1s' 
+}
+.full-main{
+  position: relative;
+  height: 300vh;
 }
