--- a/src/Assets/Css/HeroResp.css
+++ b/src/Assets/Css/HeroResp.css
@@ -1,60 +1,78 @@
-@media (height: 100vh) {
-    
-    .inner-con {
-        width: 18%;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        position: sticky;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-      }
-      
-      .inner-con h3 {
-        color: #FFF;
-        text-align: center;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 400;
-      }
-      .inner-con h3 img{
-        width: 10px;
-        height: 10px;
-        object-fit: contain;
-        display: none;
-      }
-      .inner-con p{
-        color: #FFF;
-      font-size: 12px;
-      font-style: normal;
-      font-weight: 200;
-      line-height: 168.624%; /* 42.156px */
-      font-variant: small-caps;
-      }
-      .inner-con p img{
-        display: none;
-      }
-      
-      .inner-con span {
-        color: #F6BEFF;
-        font-size: 14px;
-        font-style: normal;
-        font-weight: 200;
-        position: relative;
-      }
-      .inner-con span img{
-        content: '';
-        position: absolute;
-        /* background-image: url(./Assets/Images/vinith-svg.png); */
-        width: fit-content;
-        background-size: cover;
-        background-position: calc();
-        background-repeat: no-repeat;
-        height: 100%;
-      }
+.inner-con {
+  width: 20%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: absolute;
+  top: -60px;
+  left: 36%;
+}
 
+.inner-con h3 {
+  color: #FFF;
+  text-align: center;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+}
 
+.inner-con h3 img {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+}
+
+.inner-con p {
+  color: #FFF;
+  font-size: 6px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 168.624%;
+  /* 42.156px */
+  font-variant: small-caps;
+}
+
+.inner-con p img {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+}
+
+.inner-con span {
+  color: #F6BEFF;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  position: relative;
+}
+
+.inner-con span img {
+  content: '';
+  position: absolute;
+  /* background-image: url(./Assets/Images/vinith-svg.png); */
+  width: fit-content;
+  background-size: cover;
+  background-position: calc();
+  background-repeat: no-repeat;
+  height: 100%;
+  top: 0px;
+}
+
+.main-img {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: sticky;
+ 
+}
+
+.main-img img {
+  width: 100% !important;
+  height: 70vh !important;
+  object-fit: contain;
+  transition: 'width 1s'
 }
