--- a/src/Assets/Css/HeroResp.css
+++ b/src/Assets/Css/HeroResp.css
@@ -1,6 +1,6 @@
 .inner-con {
-  width: 20%;
-  height: 100vh;
+  width: 18.5%;
+  /* height: 100vh; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -62,7 +62,7 @@
 
 .main-img {
   width: 100%;
-  height: 100vh;
+  /* height: 100vh; */
   display: flex;
   align-items: center;
   justify-content: center;
