--- a/src/App.css
+++ b/src/App.css
@@ -76,7 +76,7 @@ h6 {
 
 .header-con {
   position: relative;
- 
+
 }
 
 .header-con::after {
@@ -115,7 +115,8 @@ h6 {
   margin: 0px 20px !important;
   padding: 5px 15px !important;
 }
-.active{
+
+.active {
   border-bottom: 2px solid #fff;
   border-left: 2px solid #fff;
   border-right: 2px solid #fff;
@@ -130,7 +131,7 @@ h6 {
 
 .navs {
   border-bottom: 1px solid rgba(255, 255, 255, 0.22);
-  
+
 }
 
 .resume-btn {
@@ -351,34 +352,32 @@ h6 {
   transform: translate(-50%, -50%);
 }
 
-.eye {
+.eyee {
   display: flex;
   align-items: center;
   width: 70px;
   justify-content: space-between;
 }
 
-.left-eye,
-.right-eye {
-  background-color: #fff;
-  width: 25px;
-  height: 25px;
-  border-radius: 100%;
-  overflow: hidden;
+.eyess {
   position: relative;
-  cursor: none;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  overflow: hidden;
+  /* background-color: #fff; */
+  /* border: 2px solid #000; */
 }
 
 .eyes {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: #220823;
   width: 10px;
   height: 10px;
-  border-radius: 100%;
-  transition: transform 0.1s ease-out;
+  border-radius: 50%;
+  background-color: #000;
+  transform: translate3d(0, 0, 0);
+  position: absolute;
+  top: -200%;
+  left: 0;
 }
 
 .monkey {
@@ -455,10 +454,12 @@ h6 {
   line-height: 218.624%;
   font-variant: small-caps;
 }
-.torquee{
+
+.torquee {
   margin: 30px 0px;
 }
-.torquee-con{
+
+.torquee-con {
   background-color: #3C3040;
   width: 99%;
   height: 100px;
@@ -468,11 +469,13 @@ h6 {
   align-items: center;
   padding: 0px 10px;
 }
-.torquee-con span{
+
+.torquee-con span {
   font-family: axioz;
   font-size: 40px;
 }
-.text-stock{
+
+.text-stock {
   -webkit-text-stroke: 1px #F6BEFF;
   color: #3C3040;
 }
