--- a/src/App.css
+++ b/src/App.css
@@ -383,7 +383,8 @@ h6 {
   transform: translate3d(0, 0, 0);
   position: absolute;
   top: -140%;
-  left: 0px;
+  left: 10px;
+  right: 900px;
 }
 
 .monkey {
