--- a/src/App.css
+++ b/src/App.css
@@ -356,6 +356,7 @@ h6 {
   top: 25%;
   left: 44%;
   transform: translate(-50%, -50%);
+  width: 70px;
 }
 
 .eyee {
@@ -371,8 +372,6 @@ h6 {
   height: 30px;
   border-radius: 50%;
   overflow: hidden;
-  /* background-color: #fff; */
-  /* border: 2px solid #000; */
 }
 
 .eyes {
@@ -383,7 +382,8 @@ h6 {
   transform: translate3d(0, 0, 0);
   position: absolute;
   top: -140%;
-  left: 10px;
+  left: -13px;
+  right: -13px;
   right: 900px;
 }
 
@@ -592,7 +592,6 @@ h6 {
 
 .work-box-con {
   border: 2px solid #F6BEFF;
-
   background: rgba(246, 190, 255, 0.15);
   width: 100%;
   height: 400px;
@@ -600,8 +599,19 @@ h6 {
   animation: box-ani 5s infinite;
   transition: 5s;
   overflow: hidden;
+  position: relative;
   /* transform: translateX(20px); */
 
+}
+.work-box-con::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #3C3040;
+  width: 100%;
+  height: 35px;
+  z-index: -1;
 }
 
 @keyframes box-ani {
@@ -632,6 +642,7 @@ h6 {
   justify-content: space-between;
   width: 85%;
   margin: 10px auto;
+  z-index: 20;
   /* animation: ani-scrow 5s infinite; */
 
 }
@@ -1088,4 +1099,172 @@ footer {
     height: 500vh;
   }
   
+}
+
+/* =====smoke wrapper */
+
+.cup-wrap {
+  width: 20px;
+  height: 20px;
+  position: relative;
+}
+
+.cup {
+  position: absolute;
+  bottom: 14px;
+  left: 35px;
+  width: 100%;
+  height: 100%;
+  background-image: url(./Assets/Images/cup-coffe.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 20px;
+}
+
+.mobile-cup{
+  left: 90% !important;
+}
+.smoke-wrap {
+  position: absolute;
+  left: 100%;
+  transform: translateX(50%);
+  bottom: 20px;
+  z-index: 10;
+}
+
+.smoke,
+.smoke2,
+.smoke3 {
+  filter: blur(10px);
+  transform-origin: 50% 50%;
+}
+
+.smoke {
+  animation: smoke1 3s linear infinite;
+  animation-delay: 0.5s;
+}
+
+.smoke2 {
+  animation: smoke2 3s linear infinite;
+  animation-delay: 1.5s;
+}
+
+.smoke3 {
+  width: 500px;
+  animation: smoke3 4s linear infinite;
+  animation-delay: 2.5s;
+}
+
+@keyframes smoke1 {
+  0% {
+    filter: blur(0px);
+    transform: translateY(0px) scale(-1, 1);
+    opacity: 0;
+  }
+
+  25% {
+    filter: blur(3px);
+    transform: translateY(-10px) scale(-1, 1.05);
+    opacity: 0.5;
+  }
+
+  50% {
+    filter: blur(5px);
+    transform: translateY(-20px) scale(-1, 1.1);
+    opacity: 1;
+  }
+
+  75% {
+    filter: blur(5px);
+    transform: translateY(-30px) scale(-1, 1.15);
+    opacity: 0.5;
+  }
+
+  100% {
+    filter: blur(7px);
+    transform: translateY(-40px) scale(-1, 1.2);
+    opacity: 0;
+  }
+}
+
+@keyframes smoke2 {
+  0% {
+    filter: blur(0px);
+    transform: translateY(0px) scale(1);
+    opacity: 0;
+  }
+
+  25% {
+    filter: blur(3px);
+    transform: translateY(-10px) scale(1.05);
+    opacity: 0.5;
+  }
+
+  50% {
+    filter: blur(5px);
+    transform: translateY(-20px) scale(1.1);
+    opacity: 1;
+  }
+
+  75% {
+    filter: blur(5px);
+    transform: translateY(-30px) scale(1.15);
+    opacity: 0.5;
+  }
+
+  100% {
+    filter: blur(7px);
+    transform: translateY(-40px) scale(1.2);
+    opacity: 0;
+  }
+}
+
+@keyframes smoke3 {
+  0% {
+    filter: blur(0px);
+    transform: translateY(0px) scale(1);
+    opacity: 0;
+  }
+
+  25% {
+    filter: blur(3px);
+    transform: translateY(-20px) scale(1.05);
+    opacity: 0.5;
+  }
+
+  50% {
+    filter: blur(5px);
+    transform: translateY(-40px) scale(1.1);
+    opacity: 1;
+  }
+
+  75% {
+    filter: blur(5px);
+    transform: translateY(-60px) scale(1.15);
+    opacity: 0.5;
+  }
+
+  100% {
+    filter: blur(7px);
+    transform: translateY(-80px) scale(1.2);
+    opacity: 0;
+  }
+}
+
+.know-more-btn{
+  border: none;
+  outline: none;
+  background-color: #d896e2;
+  padding: 2px 15px;
+  border-radius: 5px;
+  text-decoration: none !important;
+  color: #0E0D10 !important;
+
+}
+
+.links-tags{
+  text-decoration: none !important;
+  color: #0E0D10 !important;
+  text-transform: capitalize !important;
+  font-weight: 600;
 }
